--- a/src/CSS/styles.module.css
+++ b/src/CSS/styles.module.css
@@ -13,7 +13,7 @@
   align-self:flex-start;
   flex-direction: column;
   gap: 10px;
-  width: 100%;
+/*   width: 90%; */
 /*   width: ; */
 /*     max-width: 300px; */
   justify-content: center; /* Горизонтальное выравнивание */
