--- a/src/CSS/styles.module.css
+++ b/src/CSS/styles.module.css
@@ -1,3 +1,4 @@
+/* styles.module.css */
 .pagecontainer {
   display: flex;
   justify-content: flex-start; /* Выравнивание элементов по центру контейнера */
